# khandaq

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  skills-lock.json
.github/workflows/: changelog.yml
brand/_pack/: README.md
changelog/: README.md
changelog/releases/: 2026-06-10-v0.2.5.json  2026-06-11-v0.2.6.json
config/: khandaq_bootstrap_nodes.json  khandaq_push.json
docs/: ANDROID_REBRAND_AUDIT.md  ANDROID_RELEASE_PLAN.md  BOOTSTRAP.md  BOOTSTRAP_AUDIT.md  BUILDING.md  KHANDAQ_ALPHA_RC_REPORT.md  KHANDAQ_ANDROID_REBRAND_REPORT.md  KHANDAQ_ANDROID_SMOKE_TEST_REPORT.md  KHANDAQ_BUILD.md  KHANDAQ_CHANGELOG.md  KHANDAQ_REBRAND_PLAN.md  LICENSE_AUDIT.md  LINUX_BUILD.md  MOBILE_BUILD.md  MOBILE_STRATEGY.md  NETWORK.md  PROJECT_STATUS_REPORT.md  PUSH_RELAY.md  RELEASE_COMPLIANCE.md  SECURITY_AUDIT_RETEST.md  WINDOWS_BUILD.md  smoke-test-logcat.txt
docs/smoke-test-screenshots/: c2-summary.txt  c3-logcat.txt  c3-tox-grep.txt  full-logcat.txt
infra/bootstrap/: .env.example  Dockerfile  FIREWALL.md  MONITORING.md  README.md  bootstrap-daemon.conf  bootstrap.conf  deploy-node.sh  docker-compose.yml  install.sh  khandaq-bootstrap.service  nginx-bootstrap.conf
khandaq-android/: README.md
khandaq-android-trifa/: CHANGELOG.md  FAQ.md  Import_toxsave.md  OFFLINE_MESSAGES.md  README.md  ndk-stack_info.txt
khandaq-android-trifa/android-refimpl-app/loggingstdout/src/main/cpp/: CMakeLists.txt
khandaq-desktop/: CMakeLists.txt  MAINTAINING.md  README.md  khandaq.desktop  res.qrc
khandaq-desktop/buildscripts/toxext_messages/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  install_manifest.txt  tox_extension_messages.c  tox_extension_messages.h
khandaq-desktop/buildscripts/toxext_messages/test/: CMakeLists.txt  max_message_test.c  sanity_test.c
khandaq-ios/: PRIVACY_POLICY.md  Podfile  README.md
scripts/: android-rebrand-migrate.sh  android-rebrand-revert-java-move.sh  android-smoke-test-c3.sh  android-smoke-test.sh  apply-brand-assets.sh  audit-bootstrap-nodes.sh  build-android-trifa.sh  build-ios-native-deps.sh  build-ios.sh  build-linux-deb.sh  build-linux-docker.sh  build-linux.sh  build-macos.sh  build-windows-cross.sh  bundle-linux-portable.sh  check-bootstrap-health.sh  collect-bootstrap-metrics.sh  create-android-release-keystore.sh  deploy-bootstrap-registry.sh  deploy-messenger-site.sh  deploy-monitoring.sh  deploy-push-relay.sh  deploy-site.sh  fetch-android-atox.sh  fetch-ios-antidote.sh  generate-bootstrap-registry.py  generate-changelog.py  generate-khandaq-desktop-icons.sh  live-qa-mobile.sh  package-release-source.sh  setup-uptime-kuma.py  setup-uptime-kuma.sh  sync-all-bootstrap-nodes.py  sync-android-bootstrap-nodes.py  test-desktop-ui.sh  verify-android-upgrade-path.sh  verify-linux-build.sh
web/: changelog.html  changelog.json  index.html  robots.txt  sitemap.xml  style.css
(+724 files in other folders)
